crates/pcb/tests/snapshots/tag__publish_board_invalid_path.snap
---
source: crates/pcb/tests/tag.rs
assertion_line: 102
expression: output
---
Command: pcb publish boards/NonExistent.zen --bump minor --no-push --force
Exit Code: 1

--- STDOUT ---

--- STDERR ---
Error: Board file not found
  No such file or directory (os error 2)
