crates/pcb/tests/snapshots/tag__tag_duplicate_tag.snap
---
source: crates/pcb/tests/tag.rs
assertion_line: 75
expression: output
---
Command: pcb tag -v 1.0.0 -b TB0001
Exit Code: 1

--- STDOUT ---

--- STDERR ---
✗ Checking tag doesn't exist failed
Error: Checking tag doesn't exist failed

Caused by:
    Tag 'boards/Test/v1.0.0' already exists
