crates/pcb/tests/snapshots/tag__tag_older_version_allowed.snap
---
source: crates/pcb/tests/tag.rs
expression: output
---
Command: pcb tag -v 1.2.0 -b TB0001
Exit Code: 0

--- STDOUT ---

--- STDERR ---
✓ Checking tag doesn't exist
✓ Release information gathered
✓ Copying source files and dependencies
✓ Validating build from staged sources
✓ Copying layout files
✓ Generating board config
✓ Copying documentation
✓ Substituting version variables
✓ Generating fabrication drawing
✓ Generating design BOM
✓ Generating gerber files
✓ Generating pick-and-place file
✓ Generating assembly drawings
✓ Generating ODB++ files
✓ Generating STEP model
✓ Generating VRML model
✓ Generating GLB model
✓ Generating SVG rendering
✓ Writing release metadata
✓ Creating release archive
✓ Release <COMMIT_HASH> staged successfully
✓ Creating git tag
✓ Tag TB0001/v1.2.0 created successfully
